--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,6 +1,6 @@
 <div class="cover-image">
-  <h1 class="cover-brand-text">Jangin Rasheed</h1>
-  <a href="#" class="cover-text-text">To the gallery &#8594;</a>
+  <h1 class="cover-text cover-brand-text">Jangin Rasheed</h1>
+  <a class="cover-text cover-text-text" href="#">To the gallery &#8594;</a>
   <div class="header-icon--container">
     <a target="_blank" href="http://www.instagram.com/janginrasheed">
       <img class="header-icon" src="assets/images/instagram.png" alt="instagram">
