--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -3,13 +3,13 @@
   <a class="cover-text cover-text-text" (click)="navigateTo('/gallery')">To the gallery &#8594;</a>
   <div class="header-icon--container">
     <a target="_blank" href="http://www.instagram.com/janginrasheed">
-      <img class="header-icon" src="assets/images/instagram.png" alt="instagram">
+      <img class="header-icon" src="assets/images/icons/instagram.png" alt="instagram">
     </a>
-    <a target="_blank" href="https://www.flickr.com/photos/jangin9rasheed">
-      <img class="header-icon" src="assets/images/flickr.png" alt="flickr">
+    <a target="_blank" href="https://www.facebook.com/jangin.photography">
+      <img class="header-icon" src="assets/images/icons/facebook.png" alt="facebook">
     </a>
-    <a target="_blank" href="https://500px.com/p/jangin9rasheed">
-      <img class="header-icon" src="assets/images/500px.png" alt="500px">
+    <a target="_blank" href="mailto:jangin9rasheed9@gmail.com">
+      <img class="header-icon" src="assets/images/icons/email.png" alt="email">
     </a>
   </div>
 </div>
