--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,7 +1,20 @@
-@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@200;400;500&display=swap'); //font-family: 'Raleway', sans-serif;
+@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@200;400;500&display=swap');
+//font-family: 'Raleway', sans-serif;
 @import url('https://fonts.googleapis.com/css2?family=Courgette&display=swap'); //font-family: 'Courgette', cursive;
 
 body {
   margin: 0;
   font-family: 'Raleway', sans-serif !important;
+  background-color: black;
+  color: white;
+}
+
+.divider {
+  margin: 0 3rem;
+}
+
+@media screen and (max-width: 663px) {
+  .navbar-link {
+    margin-top: 1rem !important;
+  }
 }
