--- a/src/app/dialog/dialog.component.html
+++ b/src/app/dialog/dialog.component.html
@@ -14,9 +14,9 @@
         <mat-label>Location</mat-label>
         <input matInput placeholder="" value="">
       </mat-form-field>
-      <mat-form-field class="dialog-input-width-2">
+      <mat-form-field class="dialog-input-width-1">
         <mat-label>Description</mat-label>
-        <textarea matInput placeholder="Ex. It makes me feel..."></textarea>
+        <textarea matInput placeholder="Descripe the image"></textarea>
       </mat-form-field>
     </div>
   </form>
