--- a/src/app/dialog/dialog.component.scss
+++ b/src/app/dialog/dialog.component.scss
@@ -3,15 +3,14 @@
 
 .dialog-input--container {
   display: flex;
+  flex-direction: column;
   flex-wrap: wrap;
   width: 100%;
 }
 
 .dialog-input-width-1 {
   width: 10rem;
-  margin: 0 1rem;
 }
 
 .dialog-input-width-2 {
-  width: 100;
 }
