--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,12 +1,9 @@
-@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@200;400;500&display=swap');
-//font-family: 'Raleway', sans-serif;
+@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@200;400;500&display=swap');//font-family: 'Raleway', sans-serif;
 @import url('https://fonts.googleapis.com/css2?family=Courgette&display=swap'); //font-family: 'Courgette', cursive;
 
 body {
   margin: 0;
   font-family: 'Raleway', sans-serif !important;
-  background-color: black;
-  color: white;
 }
 
 .divider {
